# from-qiskit-python-to-cpp

./: README.md  index.html  slides.md
.claude/: settings.local.json
examples/: CMakeLists.txt
examples/01_hello_circuit/: hello_circuit.cpp  hello_circuit.py
examples/02_gates_tour/: gates_tour.cpp  gates_tour.py
examples/03_bell_state/: bell_state.cpp  bell_state.py
examples/04_ghz_circuit/: ghz_circuit.cpp  ghz_circuit.py
examples/05_parameterized/: parameterized.cpp  parameterized.py
examples/06_observables/: observables.cpp  observables.py
examples/07_compose_append/: compose_append.cpp  compose_append.py
examples/08_local_transpile/: local_transpile.cpp  local_transpile.py
examples/08_transpile/: transpile.cpp  transpile.py
examples/09_backend_transpile/: backend_transpile.cpp  backend_transpile.py
examples/09_sampler/: sampler.cpp  sampler.py
examples/10_sampler/: sampler.cpp  sampler.py
examples/utils/: qiskit_utils.hpp
setup/: check_setup.sh
